--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ anyhow = {version = "1"}
 reqwest = {version = "0.11", features = ["blocking"]}
 structopt = { version = "0.3", default-features = false }
 chrono = "0.4"
-ansi_term = "0.12"
+tui = "0.14"
+termion = "1.5"
